[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/Environnement/game_over.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Pixeled.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 698.0
margin_top = 379.0
margin_right = 923.0
margin_bottom = 537.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 288.0
margin_top = 530.0
margin_right = 468.0
margin_bottom = 571.0
custom_fonts/font = SubResource( 2 )
text = "Retour au menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainButton" type="Button" parent="."]
margin_left = 514.0
margin_top = 530.0
margin_right = 694.0
margin_bottom = 571.0
custom_fonts/font = SubResource( 2 )
text = "Ré-éssayer"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
